# dsba-itop2021-hw1

./: README.md
test_mult_window/: CMakeLists.txt  aboutdialog.h  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h  responses short.csv  windowInput.cpp  windowInput.h  windowInput.ui  windowOutput.cpp  windowOutput.h  windowOutput.ui
